--- a/Starbuzz Coffee/mission.html
+++ b/Starbuzz Coffee/mission.html
@@ -1,5 +1,7 @@
+<!doctype html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Starbuzz Coffee's Mission</title>
 	<style type="text/css">
 		body {
