--- a/Trip Around USA/journal.html
+++ b/Trip Around USA/journal.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>My Trip Around the USA on a Segway</title>
+	<link rel="stylesheet" type="text/css" href="journal.css">
 </head>
 <body>
 	<h1>Segway'n USA</h1>
