Chapter 11.5 add award and coupon

--- a/Head First Lounge/lounge.html
+++ b/Head First Lounge/lounge.html
@@ -119,6 +119,10 @@
 			the property of their respective owners.
 		</p>
 	</div>
+
+	<div id="award">
+		<img src="images/award.gif" alt="Roaster of the Year award">
+	</div>
 	
 </body>
 </html>
