--- a/Starbuzz Coffee/index.html
+++ b/Starbuzz Coffee/index.html
@@ -5,15 +5,16 @@
 	<title>Starbuzz Coffee</title>
 	<link type="text/css" rel="stylesheet" href="starbuzz.css">
 </head>
+
 <body>
-	<div id="header">
+	<header class="top">
 		<img id="headerLogo" src="images/headerLogo.gif" alt="Starbuzz Coffee logo image">
 		<img id="headerSlogan" src="images/headerSlogan.gif" alt="Providing all the caffeine you need to power your life.">
-	</div>
+	</header>
 
 	<div id="tableContainer">
 		<div id="tableRow">
-			<div id="drinks">
+			<section id="drinks">
 				<h1>BEVERAGES</h1>
 				<p>House Blend, $1.49</p>
 				<p>Mocha Cafe Latte, $2.35</p>
@@ -30,9 +31,9 @@
 				<p>Cranberry Antioxidant Blast, $2.99</p>
 				<p>Chai Chiller, $2.99</p>
 				<p>Black Brain Brew, $2.99</p>
-			</div>
+			</section>
 
-			<div id="main">
+			<section id="main">
 				<h1>QUALITY COFFEE, QUALITY CAFFEINE</h1>
 				<p>
 					At Starbuzz Coffee, we are dedicated to filling all your caffeine needs through our
@@ -78,9 +79,9 @@
 					<a href="form.html" title="The Bean Machine">Bean Machine</a>,
 					and take the Starbuzz Coffee experience home.
 				</p>
-			</div>
+			</section>
 
-			<div id="sidebar">
+			<aside>
 				<p class="beanheading">
 					<img src="images/bag.gif" alt="Bean Machine bag">
 					<br>
@@ -100,7 +101,7 @@
 					enter your order, and behind the scenes, your coffee is roasted, ground
 					(if you want), packaged, and shipped to your door.
 				</p>
-			</div>
+			</aside>
 		</div>
 	</div>
 
@@ -114,12 +115,12 @@
 		</a>
 	</div>
 
-	<div id="footer">
+	<footer>
 		&copy; 2012, Starbuzz Coffee
 		<br>
 		All trademarks and registered trademarks appearing on
 		this site are the property of their respective owners.
-	</div>
+	</footer>
 
 </body>
 </html>
